syntax = "proto3";

package protobuf;

message ExecutionDetailsEnd {
  optional int32 reqId = 1;
}
