syntax = "proto3";

package protobuf;

import "OrderCancel.proto";

message GlobalCancelRequest {
  optional OrderCancel orderCancel = 1;
}
